--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="heading">
@@ -11,5 +12,43 @@
             Simple Calcuator
         </h1>
     </div>
+    <div class="calculator-body">
+        <div class="display-panel">
+
+        </div>
+        <div class="div1">
+            <div class="btn"><button><h1>C</h1></button></div>
+            <div class="btn"><button><h1>ON/OFF</h1></button></div>
+            <div class="btn" id="equalto"><button><h1>=</h1></button></div>
+        </div>
+        <div class="div2">
+            <div class="btn"><button><h1>1</h1></button></div>
+            <div class="btn"><button><h1>2</h1></button></div>
+            <div class="btn"><button><h1>3</h1></button></div>
+            <div class="btn"><button><h1>+</h1></button></div>
+        </div>
+        <div class="div3">
+            <div class="btn"><button><h1>4</h1></button></div>
+            <div class="btn"><button><h1>5</h1></button></div>
+            <div class="btn"><button><h1>6</h1></button></div>
+            <div class="btn"><button><h1>-</h1></button></div>
+        </div>
+        <div class="div4">
+            <div class="btn"><button><h1>7</h1></button></div>
+            <div class="btn"><button><h1>8</h1></button></div>
+            <div class="btn"><button><h1>9</h1></button></div>
+            <div class="btn"><button><h1>*</h1></button></div>
+        </div>
+        <div class="div5">
+            <div class="btn"><button><h1>.</h1></button></div>
+            <div class="btn"><button><h1>0</h1></button></div>
+            <div class="btn"><button><h1>%</h1></button></div>
+            <div class="btn"><button><h1>/</h1></button></div>
+        </div>
+    </div>
+
+    <script src="script.js">
+
+    </script>
 </body>
 </html>
