--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -17,33 +17,33 @@
 
         </div>
         <div class="div1">
-            <div class="btn"><button><h1>C</h1></button></div>
-            <div class="btn"><button><h1>ON/OFF</h1></button></div>
+            <div class="btn" id="clearBtn"><button><h1>C</h1></button></div>
+            <div class="btn" id="switchBtn"><button><h1>ON/OFF</h1></button></div>
             <div class="btn" id="equalto"><button><h1>=</h1></button></div>
         </div>
         <div class="div2">
-            <div class="btn"><button><h1>1</h1></button></div>
-            <div class="btn"><button><h1>2</h1></button></div>
-            <div class="btn"><button><h1>3</h1></button></div>
-            <div class="btn"><button><h1>+</h1></button></div>
+            <div class="btn" id="oneBtn"><button><h1>1</h1></button></div>
+            <div class="btn" id="twoBtn"><button><h1>2</h1></button></div>
+            <div class="btn" id="threeBtn"><button><h1>3</h1></button></div>
+            <div class="btn" id="plusBtn"><button><h1>+</h1></button></div>
         </div>
         <div class="div3">
-            <div class="btn"><button><h1>4</h1></button></div>
-            <div class="btn"><button><h1>5</h1></button></div>
-            <div class="btn"><button><h1>6</h1></button></div>
-            <div class="btn"><button><h1>-</h1></button></div>
+            <div class="btn" id="fourBtn"><button><h1>4</h1></button></div>
+            <div class="btn" id="fiveBtn"><button><h1>5</h1></button></div>
+            <div class="btn" id="sixBtn"><button><h1>6</h1></button></div>
+            <div class="btn" id="minusBtn"><button><h1>-</h1></button></div>
         </div>
         <div class="div4">
-            <div class="btn"><button><h1>7</h1></button></div>
-            <div class="btn"><button><h1>8</h1></button></div>
-            <div class="btn"><button><h1>9</h1></button></div>
-            <div class="btn"><button><h1>*</h1></button></div>
+            <div class="btn" id="sevenBtn"><button><h1>7</h1></button></div>
+            <div class="btn" id="eightBtn"><button><h1>8</h1></button></div>
+            <div class="btn" id="nineBtn"><button><h1>9</h1></button></div>
+            <div class="btn" id="mulBtn"><button><h1>*</h1></button></div>
         </div>
         <div class="div5">
-            <div class="btn"><button><h1>.</h1></button></div>
-            <div class="btn"><button><h1>0</h1></button></div>
-            <div class="btn"><button><h1>%</h1></button></div>
-            <div class="btn"><button><h1>/</h1></button></div>
+            <div class="btn" id="dotBtn"><button><h1>.</h1></button></div>
+            <div class="btn" id="zeroBtn"><button><h1>0</h1></button></div>
+            <div class="btn" id="modBtn"><button><h1>%</h1></button></div>
+            <div class="btn" id="divBtn"><button><h1>/</h1></button></div>
         </div>
     </div>
 
