--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -13,12 +13,12 @@
         </h1>
     </div>
     <div class="calculator-body">
-        <div class="display-panel">
+        <div class="display-panel" id="display-pnl">
 
         </div>
         <div class="div1">
             <div class="btn" id="clearBtn"><button><h1>C</h1></button></div>
-            <div class="btn" id="switchBtn"><button><h1>ON/OFF</h1></button></div>
+            <div class="btn" id="switchBtn"><button><h1>OFF</h1></button></div>
             <div class="btn" id="equalto"><button><h1>=</h1></button></div>
         </div>
         <div class="div2">
